Fixed latent croppingand toolbar bugs. Added corner rounding. Added drawing and highlighting to the video editor.

--- a/dinolabswebide/src/styles/mainStyles/DinoLabsIDEMedia.css
+++ b/dinolabswebide/src/styles/mainStyles/DinoLabsIDEMedia.css
@@ -452,7 +452,7 @@
 
     .dinolabsIDEVideoContentFlexBig, 
     .dinolabsIDEVideoContentFlexSmall {
-        width: 33%; 
+        width: 25%; 
         display: flex; 
         justify-content: center;
         align-items: center;
